--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-modal-video": "^2.0.0"
+    "react-icons": "^5.3.0",
+    "react-modal-video": "^2.0.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
