--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@mui/material": "^6.1.4",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "framer-motion": "^11.11.10",
+    "gsap": "^3.12.5",
+    "latest": "^0.2.0",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
