--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@mui/material": "^6.1.4",
+    "@next/third-parties": "^15.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^11.11.10",
